# portfolio

./: .dockerignore  Dockerfile  README.md  staticConfig.json
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  conanfile.txt  main.cpp
backend/src/config/: config.cpp  config.hpp  config.ipp
backend/src/contentLoader/: contentLoader.cpp  contentLoader.hpp
backend/src/core/: ttlContainer.hpp
backend/src/githubClient/: githubClient.cpp  githubClient.hpp
backend/src/router/: router.cpp  router.hpp
backend/src/server/: server.cpp  server.hpp
data/: staticConfig.json
deploy/: .env.example  Dockerfile  start.sh  webhook.py
frontend/: admin.html  error.html  index.html
frontend/css/: about.css  admin.css  base.css  boot.css  contact.css  error-main.css  error.css  header.css  hero.css  layout.css  main.css  repos.css  responsive.css  skills.css  stack.css  theme.css
frontend/js/: about.js  admin.js  api.js  boot.js  config.js  contact.js  error.js  hero.js  main.js  repos.js  scroll.js  skills.js  stack.js  themes.js  utils.js
frontend/static/: staticConfig.json
